@startuml example
hide empty members

Class Computer{
    + CPU cpu
    + GPU gpu1
    + GPU gpu2
    + void showInfo()
}

interface CPU{
    + showInfo()
}

interface GPU{
    + showInfo()
}

class AMD_Ryzen7_3700X{
    + showInfo()
}

class NVIDIA_GeForce_GTX_1660_SUPER{
    + showInfo()
}

Computer *-- CPU
Computer *-- GPU

CPU <|-- AMD_Ryzen7_3700X
GPU <|-- NVIDIA_GeForce_GTX_1660_SUPER

@enduml